# plato-escalation-gate

./: README.md  pyproject.toml
plato_escalation_gate/: __init__.py
plato_escalation_gate.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
review/: AUDIT.md
reviews/: 2026-05-17-readme-added.md
tests/: test_escalation_extended.py  test_escalation_gate.py
